Bug 582267 - [test-gen] added timeout in composite
when there is no expected output, the test case counts as finished when
a specified time has passed without any event coming in

data connection to muxFB fixed

Change-Id: I003c8bd2d1dede4bb4e5224a6e190f6a4f470a84
Signed-off-by: Melanie Winter <melanie.winter.02@gmx.at>